# It-lab

./: CMakeLists.txt  ConsoleApplication9.sln  ConsoleApplication9.vcxproj  Result.xlsx  data_render.cpp  function.cpp  function.h  info_2x2.txt  info_4x4.txt  main.cpp  matrix_multiplication.txt  neon_multiplication_2x2.txt  neon_multiplication_4x4.txt  program.cpp
headers/: Color.hpp  Structer.hpp  data_render.hpp  f.hpp  function.hpp
source/: f.cpp  function.cpp
